--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.4",
+    "chart.js": "^4.4.8",
     "daisyui": "^2.51.6",
     "dayjs": "^1.11.8",
     "jwt-decode": "^3.1.2",
